--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -11,7 +11,7 @@ header {
   height: 100px;
   padding: 5px 5px;
 
-  background-color: rgb(255, 206, 147);
+  /* background-color: rgb(255, 206, 147); */
 }
 
 .container {
