--- a/src/components/characters/character.css
+++ b/src/components/characters/character.css
@@ -18,7 +18,7 @@
   height: 325px;
   border-radius: 5px;
 
-  /* background-color: lavender; */
+  background-color: rgba(162, 255, 122, 0.25);
 }
 
 .listing figure {
